Moved the maps js to a separate file

--- a/templates/traffic/base.html
+++ b/templates/traffic/base.html
@@ -43,5 +43,7 @@
 		<script src="{% static "js/jquery-3.3.1.min.js" %}" crossorigin="anonymous"></script>
 		<script src="{% static "js/traffic-jquery.js" %}" crossorigin="anonymous"></script>
 		<script src="{% static "js/traffic-ajax.js" %}" crossorigin="anonymous"></script>
-	</body>
+			{% block additional_resources %}
+			{% endblock %}
+		</body>
 </html>
