--- a/templates/traffic/post.html
+++ b/templates/traffic/post.html
@@ -15,26 +15,7 @@
 
 {% block right_body_block %}
 	<div id="r-block" class="contentbox">
-		<div id="map">
-			<script type="text/javascript">
-				function GetMap(){
-					var map = new Microsoft.Maps.Map('#map', { 
-							credentials: 'AuJ09npEnmthbBSxKu6teNImwt-6ZIn83affPp-nyUTAfXypqFl12jmF_SFV0IO6',
-							center: new Microsoft.Maps.Location({{ post.location }}),
-							mapTypeId: Microsoft.Maps.MapTypeId.road,
-							zoom: 15,
-						});
-
-						var location = new Microsoft.Maps.Location({{ post.location }})
-						var pin = new Microsoft.Maps.Pushpin( location, {
-							title: '{{ post.title }}',
-							});
-		
-						map.entities.push(pin);
-				}
-			</script>
-			<script type='text/javascript' src='http://www.bing.com/api/maps/mapcontrol?callback=GetMap' async defer></script>
-		</div>
+		<div id="map" data-centre="{{ post.id }}" data-postids="{{ post.id }}" data-zoom=20 ></div>
 		{{ post.location }}
 	</div>
 {% endblock %}
@@ -129,4 +110,9 @@
 	</div>
 </div>
 	
+{% endblock %}
+
+{% block additional_resources %}
+	<script src="{% static "js/maps-Bing.js" %}" crossorigin="anonymous"></script>
+	<script type='text/javascript' src='http://www.bing.com/api/maps/mapcontrol?callback=GetMap' async defer></script>
 {% endblock %}
