--- a/templates/traffic/post.html
+++ b/templates/traffic/post.html
@@ -55,9 +55,10 @@
 				<button id="green_btn" 
 					data-postid="{{ post.id }}" 
 					class="btn btn-primary btn-sm" 
-					type="button"> 
+					type="button"
+					onClick="window.location.href=window.location.href"> 
 					<span data-feather="thumbs-up"></span> 
-					{{ post.redCount }}
+					{{ post.greenCount }}
 				</button>
 			</div>
 		
@@ -65,7 +66,8 @@
 				<button id="yellow_btn" 
 					data-postid="{{ post.id }}" 
 					class="btn btn-primary btn-sm" 
-					type="button"> 
+					type="button"
+					onClick="window.location.href=window.location.href"> 
 					<span data-feather="thumbs-up"></span> 
 					{{ post.yellowCount }}
 				</button>
@@ -75,7 +77,8 @@
 				<button id="red_btn" 
 					data-postid="{{ post.id }}" 
 					class="btn btn-primary btn-sm" 
-					type="button"> 
+					type="button"
+					onClick="window.location.href=window.location.href"> 
 					<span data-feather="thumbs-up"></span> 
 					{{ post.redCount }}
 				</button>
@@ -85,7 +88,8 @@
 				<button id="stop_btn" 
 					data-postid="{{ post.id }}" 
 					class="btn btn-primary btn-sm" 
-					type="button"> 
+					type="button"
+					onClick="window.location.href=window.location.href"> 
 					<span data-feather="thumbs-up"></span> 
 					{{ post.stopCount }}
 				</button>
@@ -107,7 +111,7 @@
 						{{ field }}
 					{% endfor %}
 				   {% csrf_token %}
-				  <input type = "submit" value= "Post">
+				  <input type = "submit" value= "Post" class="submitbutton">
 				  </form>
 				{% endif %}
 			{% else %}
