--- a/templates/traffic/account.html
+++ b/templates/traffic/account.html
@@ -10,7 +10,7 @@
         <form id="UpdateDetailsForm" method="POST" action="/account/changepassword/" enctype="multipart/form-data" >
             {% csrf_token %}
             {{ updateDetailsForm.as_p }}
-            <input type="submit" name="submit" value="Change Password" />
+            <input type="submit" name="submit" value="Change Password" class="submitbutton"/>
         </form>
     </div>
 {% endblock %}
