--- a/templates/traffic/search.html
+++ b/templates/traffic/search.html
@@ -7,7 +7,7 @@
 		{{ form.search.errors }}
 		{{ form.search.help_text }}
 		{{ form.search }} 
-		<input type="submit" name="submit" value="Search" />
+		<input type="submit" name="submit" value="Search" class="submitbutton" />
 	</form>
 </div>
 {% endblock %}
