--- a/templates/traffic/writePosts.html
+++ b/templates/traffic/writePosts.html
@@ -1,12 +1,5 @@
 {% extends 'traffic/base.html' %}
 
-{% block topbar %}
-<div id="home-navbar" class="contextbox">
-	<a href="{% url 'traffic:index' %}">HOME</a>
-        <a href="{% url 'traffic:about' %}">ABOUT</a>
-        <a href="{% url 'traffic:addposts' %}">POST</a>
-</div>
-{% endblock %}
 
 {% block left_body_block %}
     <div id="l-block" class="contentbox">
@@ -21,7 +14,7 @@
                     <div id="fieldhelp">{{ field.help_text }}</div>
                     <div id="field">{{ field }}</div><br/><br/><br/>
             {% endfor %}
-            <input type="submit" name="submit" value="Write Post" />
+            <input type="submit" name="submit" value="Write Post" class="submitbutton"/>
         </form>
 	</div>
 {% endblock %}
