--- a/templates/traffic/post.html
+++ b/templates/traffic/post.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block topbar %}
-	<div id="topbar" class="contentbox">
+	<div id="title" class="contentbox">
 		{{ post.title }}
 	</div>
 {% endblock %}
