--- a/templates/traffic/base.html
+++ b/templates/traffic/base.html
@@ -31,6 +31,7 @@
 		<div id="navbar" class="contextbox">
 			<a href="{% url 'traffic:index'%}">HOME</a>
 			<a href="{% url 'traffic:about'%}">ABOUT</a>
+			<a href="{% url 'traffic:search'%}">SEARCH</a>
 			{% if user.is_authenticated %}
 				<a href="{% url 'traffic:addposts'%}">POST</a>
 				<a href="{% url 'traffic:account'%}">ACCOUNT</a>
