--- a/templates/traffic/about.html
+++ b/templates/traffic/about.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block bottombar%}
-<div id="bottombar-lone" class="contentbox">
+<div id="bottombar-lone" class="textpanel">
 	{% block info %}
 	{% endblock %}
 </div>
