--- a/templates/traffic/faq.html
+++ b/templates/traffic/faq.html
@@ -1,7 +1,7 @@
 {% extends 'traffic/about.html' %}
 
 {% block info %}
-	<strong>-- FAQ --</strong></br>
+	<strong>FAQ</strong></br>
 	</br>
 	<strong>Q :</strong> Why can’t I see who has commented?</br>
     <strong>A:</strong>  Comments on Traffic-Not-My-Jam are anonymized! Other users can’t see what you have commented to discourage arguments.</br>
