--- a/templates/traffic/info.html
+++ b/templates/traffic/info.html
@@ -1,8 +1,8 @@
 {% extends 'traffic/about.html' %}
 
 {% block info %}
-	<strong>-- Information --</strong></br>
-	Tired of complaining to unimpressed coworkers about the commute from hell? Can’t believe the state of the roads? 
+	<strong>Information</strong></br>
+	<p>Tired of complaining to unimpressed coworkers about the commute from hell? Can’t believe the state of the roads? 
 	Inconsiderate drivers getting on your nerves? “Traffic Not-My- Jam” is for you! React to the latest posts using 
-	our handy traffic light system. Sign up for an account to leave comments and create your own posts!
+	our handy traffic light system. Sign up for an account to leave comments and create your own posts!</p>
 {% endblock %}
