--- a/templates/traffic/rule.html
+++ b/templates/traffic/rule.html
@@ -1,7 +1,7 @@
 {% extends 'traffic/about.html' %}
 
 {% block info %}
-	<strong>-- Rules --</strong></br>
+	<strong>Rules</strong></br>
 	</br>
 	-	No images containing car registration plates are permitted. </br>
 	</br>
