--- a/templates/traffic/login.html
+++ b/templates/traffic/login.html
@@ -15,7 +15,7 @@
             <input type="password" name="password" value="" size="50" /> 
             <br/><br/>
             
-            <input type="submit" name="submit" value="Submit" />
+            <input type="submit" name="submit" value="Submit" class="submitbutton" />
         </form>
     </div>
 {% endblock %}
