--- a/templates/traffic/register.html
+++ b/templates/traffic/register.html
@@ -12,7 +12,7 @@
                 {% csrf_token %}
                 {{ userForm.as_p }}
                 {{ userProfileForm.as_p }}
-                <input type="submit" name="submit" value="Register" />
+                <input type="submit" name="submit" value="Register" class="submitbutton"/>
             </form>
         {% endif %}
     </div>
