--- a/static/css/base.css
+++ b/static/css/base.css
@@ -269,7 +269,7 @@ div.contentbox a:hover{
 	margin-bottom: 180px;
 }
 .mapindex{
-	margin-top: 70px;
+	margin-top: 30px;
 }
 .mappost{
 	margin-top: 0px;
@@ -320,4 +320,36 @@ div.contentbox a:hover{
 	width: 50%;
 	font-size: 25px;
 	color:  #e8e8e8;
+}
+
+#title3{
+	margin: auto;
+	margin-left: 2%;
+	margin-top: 35px;
+	width: auto;
+	font-size: 30px;
+	color:  #e8e8e8;
+}
+
+.page-numbering{
+	margin: auto;
+	width: auto;
+
+}
+
+.page-numbering a {
+	background-color: #00334e;
+	color: #e8e8e8;
+	padding: 10px 10px;
+	float: left;
+	size: 10px;
+	border-radius: 4px;
+	transition-duration: 250ms;
+
+}
+
+.page-numbering a:hover {
+	background-color: #e8e8e8;
+	color: #00334e;
+
 }
