Fixed a bug that would break the maps for posts with no location

--- a/templates/traffic/post.html
+++ b/templates/traffic/post.html
@@ -17,7 +17,7 @@
 
 {% block right_body_block %}
 	<div id="r-block" >
-		<div id="map" class="mappost" data-centre="{{ post.id }}" data-postids="{{ post.id }}" data-zoom=20 ></div>
+		<div id="map" class="mappost" data-centre="-" data-postids="{{ post.id }}" data-zoom=20 ></div>
 		{{ post.location }}
 	</div>
 {% endblock %}
