--- a/static/css/base.css
+++ b/static/css/base.css
@@ -86,6 +86,17 @@ body{
 	font-size: 1.2em;
 }
 
+#topbar3{
+	width: 61%;
+	min-width: 615px;
+	margin: auto;
+	margin-top: 50px;
+	margin-bottom: 10px;
+	
+	text-align: left;
+	font-size: 1.2em;
+}
+
 #l-block{
 	margin-left:2%;
 	padding-left:5%;
@@ -309,17 +320,28 @@ div.contentbox a:hover{
 
 #title{
 	margin: auto;
-	width: 50%;
-	font-size: 30px;
+	width: 65%;
+	min-width: 500px;
+	font-size: 50px;
 	color:  #e8e8e8;
+	font-weight: 200;
 }
 
 #title2{
 	margin-left: 10px;
 	margin-bottom: 10px;
-	width: 50%;
-	font-size: 25px;
+	font-size: 30px;
 	color:  #e8e8e8;
+	font-weight: 550;
+}
+
+#subtitle2{
+	margin-left: 15px;
+	margin-bottom: 20px;
+	margin-top: 1px;
+	font-size: 20px;
+	color:  #e8e8e8;
+	font-weight: 300;
 }
 
 #title3{
@@ -352,4 +374,9 @@ div.contentbox a:hover{
 	background-color: #e8e8e8;
 	color: #00334e;
 
+}
+
+/* Use for adding non-breaking spaces */
+span.nonbreaking {
+	display: inline-block;
 }
