--- a/templates/traffic/base.html
+++ b/templates/traffic/base.html
@@ -32,6 +32,7 @@
 			<a href="{% url 'traffic:index'%}">HOME</a>
 			<a href="{% url 'traffic:about'%}">ABOUT</a>
 			<a href="{% url 'traffic:search'%}">SEARCH</a>
+			<a href="{% url 'traffic:categories'%}">CATEGORIES</a>
 			{% if user.is_authenticated %}
 				<a href="{% url 'traffic:addposts'%}">POST</a>
 				<a href="{% url 'traffic:account'%}">ACCOUNT</a>
