--- a/templates/traffic/account.html
+++ b/templates/traffic/account.html
@@ -1,7 +1,39 @@
 {% extends 'traffic/base.html' %}
 
 {% block topbar %}
-    <div id="topbar" class="contentbox">User: <strong>{{ user.username }}</strong> <br/></div>
+    <div id="topbar" class="contentbox"><strong>{{ user.username }}'s Account</strong> <br/></div>
+{% endblock %}
+
+
+{% block right_body_block %}
+    
+     <div id="r-block" class="contentbox">
+        <strong> Your Posts: </strong> <br/>
+        {% for post in posts %} 
+    	<div class="postbox">
+			<div id="posttitle"><strong><a href="{% url 'traffic:post' postSlug=post.slug%}">{{ post.title }}</a></strong> </div>
+			<div id="postinfo"> A {{ post.category }} incident posted by {{ post.user.username }}</div>
+			<div id="postimg"> <img src="{{ MEDIA_URL }}{{ post.photo }}" alt="Post Image Unavailable"> </div>
+		</div>
+        {% endfor %}
+        <br/>
+        <strong>Your comments:</strong> <br/>
+        {% for comment in comments %}
+            You commented :"{{ comment }}"  on {{ comment.post }}<br/>
+        {% endfor %}
+        
+
+        {% for post in commentPost %}
+        <div class="postbox">
+			<div id="posttitle"><strong><a href="{% url 'traffic:post' postSlug=post.slug%}">{{ post.title }}</a></strong> </div>
+			<div id="postinfo"> A {{ post.category }} incident posted by {{ post.user.username }}</div>
+			<div id="postimg"> <img src="{{ MEDIA_URL }}{{ post.photo }}" alt="Post Image Unavailable"> </div>
+		</div>
+        {% endfor %}
+        
+    
+        
+    </div>      
 {% endblock %}
 
 {% block left_body_block %}
@@ -12,19 +44,5 @@
             {{ updateDetailsForm.as_p }}
             <input type="submit" name="submit" value="Change Password" class="submitbutton"/>
         </form>
-    </div>
-{% endblock %}
-
-{% block right_body_block %}
-    <div id="r-block" class="contentbox">
-        <strong> Posts: </strong> <br/>
-        {% for post in posts %} 
-            {{ post.title }} <br/>
-        {% endfor %}
-        <br/>
-        <strong>Comments:</strong> <br/>
-        {% for comment in comments %}
-            {{ comment.content }} <br/>
-        {% endfor %}
-    </div>
+    </div>   
 {% endblock %}
