--- a/templates/traffic/account.html
+++ b/templates/traffic/account.html
@@ -1,14 +1,35 @@
 {% extends 'traffic/base.html' %}
+{% load staticfiles %}
 
 {% block topbar %}
-    <div id="topbar" class="contentbox"><strong>{{ user.username }}'s Account</strong> <br/></div>
+    <div id="title" class="contentbox"><strong>{{ user.username }}'s Account</strong> <br/></div>
 {% endblock %}
 
 
 {% block right_body_block %}
-    
      <div id="r-block" class="contentbox">
-        <strong> Your Posts: </strong> <br/>
+        <div id="map" class="mapindex" data-centre="glasgow" data-postids="{% for p in posts %} {{ p.id }} {% endfor %}" data-zoom=11 ></div>
+        <div id="title2"> Change your Password: </div> <br/>
+        <form id="UpdateDetailsForm" method="POST" action="/account/" enctype="multipart/form-data" >
+            {% csrf_token %}
+            {% for hidden in updateDetailsForm.hidden_fields %}
+                {{ hidden }}
+            {% endfor %}
+            {% for field in updateDetailsForm.visible_fields %}
+                <div id="register-field-name">{{ field.label }}:</div>
+                <div id="register-field">{{ field }}</div>
+                <div id="register-field-help">{{ field.help_text }}</div>
+                <div id="register-field-errors">{{ field.errors }}</div>
+            {% endfor %}
+            <input type="submit" name="submit" value="Change Password" class="submitbutton"/>
+        </form>  
+    </div>      
+{% endblock %}
+
+
+{% block left_body_block %}
+    <div id="l-block" class="contentbox">
+        <div id="title2"> Your Posts: </div> <br/>
         {% for post in posts %} 
     	<div class="postbox">
 			<div id="posttitle"><strong><a href="{% url 'traffic:post' postSlug=post.slug%}">{{ post.title }}</a></strong> </div>
@@ -17,29 +38,20 @@
 		</div>
         {% endfor %}
         <br/>
-        <strong>Your comments:</strong> <br/>
+        <div id="title2">Your Comments:</div> <br/>
         {% for comment in comments %}
-            You commented "{{ comment }}"  on :<br/>
-            {% for post in commentPost %}
-            {% if comment.pk == post.pk %}
-                <div class="postbox">
-            		<div id="posttitle"><strong><a href="{% url 'traffic:post' postSlug=post.slug%}">{{ post.title }}</a></strong> </div>
-            		<div id="postinfo"> A {{ post.category }} incident posted by {{ post.user.username }}</div>
-            		<div id="postimg"> <img src="{{ MEDIA_URL }}{{ post.photo }}" alt="Post Image Unavailable"> </div><br/>
-            	</div>
-            {% endif %}
-            {% endfor %}  
-        {% endfor %}      
-    </div>      
+            <div id="subtitle2-1">"{{ comment }}":</div><br/>
+            <div class="postbox">
+                <div id="posttitle"><strong><a href="{% url 'traffic:post' postSlug=comment.post.slug%}">{{ comment.post.title }}</a></strong> </div>
+                <div id="postinfo"> A {{ comment.post.category }} incident posted by {{ comment.post.user.username }}</div>
+                <div id="postimg"> <img src="{{ MEDIA_URL }}{{ comment.post.photo }}" alt="Post Image Unavailable"> </div><br/>
+            </div>
+        {% endfor %}   
+    </div>   
 {% endblock %}
 
-{% block left_body_block %}
-    <div id="l-block" class="contentbox">
-        <strong> Change Password: </strong> <br/>
-        <form id="UpdateDetailsForm" method="POST" action="/account/changepassword/" enctype="multipart/form-data" >
-            {% csrf_token %}
-            {{ updateDetailsForm.as_p }}
-            <input type="submit" name="submit" value="Change Password" class="submitbutton"/>
-        </form>
-    </div>   
+
+{% block additional_resources %}
+	<script src="{% static "js/maps-Bing.js" %}" crossorigin="anonymous"></script>
+	<script type='text/javascript' src='http://www.bing.com/api/maps/mapcontrol?callback=GetMap' async defer></script>
 {% endblock %}
