--- a/templates/traffic/base.html
+++ b/templates/traffic/base.html
@@ -42,6 +42,7 @@
 				<a href="{% url 'traffic:register'%}">REGISTER</a>
 			{% endif %}
 		</div>
+		</div>
 		<script src="{% static "js/jquery-3.3.1.min.js" %}" crossorigin="anonymous"></script>
 		<script src="{% static "js/traffic-jquery.js" %}" crossorigin="anonymous"></script>
 		<script src="{% static "js/traffic-ajax.js" %}" crossorigin="anonymous"></script>
