--- a/static/css/base.css
+++ b/static/css/base.css
@@ -246,7 +246,7 @@ div.contentbox a:hover{
 }
 #field{
 	float:right;
-	width: 55%;
+	width: 50%;
 }
 
 .infotxt{
@@ -334,10 +334,17 @@ div.contentbox a:hover{
 	margin-top: 5px;
 	margin-left: 10px;
 	padding: 5px;
+	padding-left: 7px;
 	font-size: 30px;
 	color:  #e8e8e8;
 	font-weight: 550;
 	border-radius: 5px;
+}
+#title2:hover{
+	border: 2px solid #e8e8e8;
+	border-radius: 5px;
+	padding-left: 5px;
+	Padding-right: 5px;
 }
 
 #subtitle2{
