--- a/templates/traffic/search.html
+++ b/templates/traffic/search.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block topbar %}
-<div class="contentbox" id="topbar2">
+<div class="contentbox" id="searchbar">
 	<div id="title"> Search the website: </div>
 	<form id="searchForm" method="post" action="/search/">
 		{% csrf_token %}
