--- a/templates/traffic/post.html
+++ b/templates/traffic/post.html
@@ -36,8 +36,7 @@
 				<button id="stop_btn" 
 					data-postid="{{ post.id }}" 
 					class="btn btn-primary btn-sm" 
-					type="button"
-					onClick="window.location.href=window.location.href"> 
+					type="button"> 
 					<span data-feather="thumbs-up"></span> 
 					{{ post.stopCount }}
 				</button>
@@ -46,8 +45,7 @@
 				<button id="red_btn" 
 					data-postid="{{ post.id }}" 
 					class="btn btn-primary btn-sm" 
-					type="button"
-					onClick="window.location.href=window.location.href"> 
+					type="button"> 
 					<span data-feather="thumbs-up"></span> 
 					{{ post.redCount }}
 				</button>
@@ -56,8 +54,7 @@
 				<button id="yellow_btn" 
 					data-postid="{{ post.id }}" 
 					class="btn btn-primary btn-sm" 
-					type="button"
-					onClick="window.location.href=window.location.href"> 
+					type="button"> 
 					<span data-feather="thumbs-up"></span> 
 					{{ post.yellowCount }}
 				</button>
@@ -66,8 +63,7 @@
 				<button id="green_btn" 
 					data-postid="{{ post.id }}" 
 					class="btn btn-primary btn-sm" 
-					type="button"
-					onClick="window.location.href=window.location.href"> 
+					type="button"> 
 					<span data-feather="thumbs-up"></span> 
 					{{ post.greenCount }}
 				</button>
