--- a/templates/traffic/faq.html
+++ b/templates/traffic/faq.html
@@ -1,17 +1,18 @@
 {% extends 'traffic/about.html' %}
 
 {% block info %}
-	<strong>FAQ</strong></br>
-	</br>
-	<strong>Q :</strong> Why can’t I see who has commented?</br>
-    <strong>A:</strong>  Comments on Traffic-Not-My-Jam are anonymized! Other users can’t see what you have commented to discourage arguments.</br>
-    </br>
-    <strong>Q:</strong> Can people see if I have made a post?</br>
-    <strong>A:</strong> Yes, People will be able to see the username of who has made the post.</br>
-    </br>
-    <strong>Q:</strong> I can’t make a comment? How do I do this?</br>
-    <strong>A:</strong> You can’t make a comment unless you are registered and signed into an account. The comment box will not be visible to user who are not logged in.</br>
-    </br>
-    <strong>Q:</strong> Can I react to a post without an account?</br>
-    <strong>A:</strong> Yes, everyone can react to posts. No account is needed.</br>
+	<div id="title">FAQ</div></br>
+	<ul style="list-style-type: none">
+        <li><strong>Q :</strong> Why can’t I see who has commented?</li>
+        <li><strong>A:</strong>  Comments on Traffic-Not-My-Jam are anonymized! Other users can’t see what you have commented to discourage arguments.</li>
+        </br>
+        <li><strong>Q:</strong> Can people see if I have made a post?</li>
+        <li><strong>A:</strong> Yes, People will be able to see the username of who has made the post.</li>
+        </br>
+        <li><strong>Q:</strong> I can’t make a comment? How do I do this?</li>
+        <li><strong>A:</strong> You can’t make a comment unless you are registered and signed into an account. The comment box will not be visible to user who are not logged in.</li>
+        </br>
+        <li><strong>Q:</strong> Can I react to a post without an account?</li>
+        <li><strong>A:</strong> Yes, everyone can react to posts. No account is needed.</li>
+    </ul>
 {% endblock %}
