--- a/templates/traffic/rule.html
+++ b/templates/traffic/rule.html
@@ -1,17 +1,13 @@
 {% extends 'traffic/about.html' %}
 
 {% block info %}
-	<strong>Rules</strong></br>
-	</br>
-	-	No images containing car registration plates are permitted. </br>
-	</br>
-    -	Posts must not contain sensitive personal information of yourself or others.</br>
-    </br>
-    -	You cannot impersonate someone else or share inaccurate or misleading information.</br>
-    </br>
-    -	Respect other Traffic-Not-My-Jam users.</br>
-    </br>
-    -	Be thoughtful about what you post. </br>
-    </br>
-    -	Stay safe on the roads and always follow the Highway Code!</br>
-{% endblock %}
+	<div id="title">Rules</div></br>
+	<ul>
+	    <li>No images containing car registration plates are permitted.</li>
+        <li>Posts must not contain sensitive personal information of yourself or others.</li>
+        <li>You cannot impersonate someone else or share inaccurate or misleading information.</li>
+        <li>Respect other Traffic-Not-My-Jam users.</li>
+        <li>Be thoughtful about what you post.</li>
+        <li>Stay safe on the roads and always follow the Highway Code!</li>
+    </ul>
+    {% endblock %}
